--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.8.11",
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/native-stack": "^7.8.1",
     "axios": "^1.13.2",
@@ -18,6 +19,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
